--- a/api/v1/paths/auth/user.yaml
+++ b/api/v1/paths/auth/user.yaml
@@ -14,6 +14,6 @@ get:
               - data
             properties:
               data:
-                $ref: "../../schemas/User.yaml"
+                $ref: "../../schemas/RegularUser.yaml"
     default:
       $ref: "../../responses/Error.yaml"
