--- a/api/v1/paths/users/_id/_index.yaml
+++ b/api/v1/paths/users/_id/_index.yaml
@@ -29,6 +29,6 @@ get:
               - data
             properties:
               data:
-                $ref: "../../../schemas/User.yaml"
+                $ref: "../../../schemas/RegularUser.yaml"
     default:
       $ref: "../../../responses/Error.yaml"
