--- a/api/v1/paths/auth/signin.yaml
+++ b/api/v1/paths/auth/signin.yaml
@@ -38,7 +38,7 @@ post:
                   - access_token
                 properties:
                   user:
-                    $ref: "../../schemas/User.yaml"
+                    $ref: "../../schemas/RegularUser.yaml"
                   access_token:
                     type: string
     default:
