--- a/api/bundle.yaml
+++ b/api/bundle.yaml
@@ -1596,6 +1596,35 @@ paths:
                         type: string
         default:
           $ref: '#/components/responses/Error'
+  /v1/suggest/city:
+    get:
+      tags:
+        - suggest
+      summary: Suggest city
+      description: Suggests a city with provided city name
+      parameters:
+        - name: name
+          required: false
+          in: query
+          description: name of a city
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - data
+                properties:
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/City'
+        default:
+          $ref: '#/components/responses/Error'
 components:
   securitySchemes:
     cookieAuth:
