--- a/api/bundle.yaml
+++ b/api/bundle.yaml
@@ -130,6 +130,7 @@ paths:
         - bearerAuth: []
       responses:
         '200':
+          description: Success
           content:
             application/json:
               schema:
@@ -993,6 +994,32 @@ paths:
                           $ref: '#/components/schemas/Organization'
         default:
           $ref: '#/components/responses/Error'
+  /v1/organizations/{organizationID}:
+    get:
+      tags:
+        - organizations
+      summary: Get organization by id
+      description: Returns organization by id
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: organizationID
+          required: true
+          in: path
+          description: ID of organization
+          schema:
+            type: integer
+            minimum: 1
+          example: 1
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Organization'
+        default:
+          $ref: '#/components/responses/Error'
   /v1/organizations/verifications:
     get:
       tags:
@@ -1238,6 +1265,7 @@ paths:
             default: ASC
       responses:
         '200':
+          description: Success
           content:
             application/json:
               schema:
@@ -1275,6 +1303,7 @@ paths:
                   type: integer
       responses:
         '201':
+          description: Success
           content:
             application/json:
               schema:
@@ -1331,6 +1360,7 @@ paths:
             default: ASC
       responses:
         '200':
+          description: Success
           content:
             application/json:
               schema:
@@ -1368,6 +1398,7 @@ paths:
                   type: integer
       responses:
         '201':
+          description: Success
           content:
             application/json:
               schema:
