--- a/api/v1/paths/auth/user.yaml
+++ b/api/v1/paths/auth/user.yaml
@@ -6,6 +6,7 @@ get:
     - bearerAuth: []
   responses:
     '200':
+      description: Success
       content:
         application/json:
           schema:
