--- a/api/v1/paths/organizations/_id/_index.yaml
+++ b/api/v1/paths/organizations/_id/_index.yaml
@@ -4,10 +4,6 @@ get:
   summary: Get organization by id
   description: |-
     Returns organization by id
-
-    Для получения неверифицированного тендера
-    **[Role](https://youtrack.ubrato.ru/articles/UBR-A-7/Roli-privilegii) required**:
-    'Employee' or higher.
   security:
     - bearerAuth: []
   parameters:
@@ -25,11 +21,6 @@ get:
       content:
         application/json:
           schema:
-            type: object
-            required:
-              - data
-            properties:
-              data:
-                $ref: "../../schemas/Organization.yaml"
+            $ref: "../../../schemas/Organization.yaml"
     default:
-      $ref: "../../responses/Error.yaml"
+      $ref: "../../../responses/Error.yaml"
