--- a/api/v1/paths/organizations/_id/_index.yaml
+++ b/api/v1/paths/organizations/_id/_index.yaml
@@ -21,6 +21,11 @@ get:
       content:
         application/json:
           schema:
-            $ref: "../../../schemas/Organization.yaml"
+            type: object
+            required:
+              - data
+            properties:
+              data:
+                $ref: "../../../schemas/Organization.yaml"
     default:
       $ref: "../../../responses/Error.yaml"
