--- a/api/bundle.yaml
+++ b/api/bundle.yaml
@@ -1042,7 +1042,12 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Organization'
+                type: object
+                required:
+                  - data
+                properties:
+                  data:
+                    $ref: '#/components/schemas/Organization'
         default:
           $ref: '#/components/responses/Error'
   /v1/organizations/verifications:
