--- a/api/v1/paths/tenders/_id/comments.yaml
+++ b/api/v1/paths/tenders/_id/comments.yaml
@@ -22,8 +22,11 @@ post:
         schema:
           type: object
           required:
+            - title
             - content
           properties:
+            title:
+              type: string
             content:
               type: string
             attachments:
