--- a/api/bundle.yaml
+++ b/api/bundle.yaml
@@ -581,8 +581,11 @@ paths:
             schema:
               type: object
               required:
+                - title
                 - content
               properties:
+                title:
+                  type: string
                 content:
                   type: string
                 attachments:
@@ -2087,6 +2090,7 @@ components:
       required:
         - id
         - organization
+        - title
         - content
         - verification_status
         - created_at
@@ -2095,6 +2099,8 @@ components:
           type: integer
         organization:
           $ref: '#/components/schemas/Organization'
+        title:
+          type: string
         content:
           type: string
         attachments:
