--- a/api/v1/schemas/Comment.yaml
+++ b/api/v1/schemas/Comment.yaml
@@ -2,6 +2,7 @@ type: object
 required:
   - id
   - organization
+  - title
   - content
   - verification_status
   - created_at
@@ -10,6 +11,8 @@ properties:
     type: integer
   organization:
     $ref: "Organization.yaml"
+  title:
+    type: string
   content:
     type: string
   attachments:
