--- a/api/bundle.yaml
+++ b/api/bundle.yaml
@@ -97,7 +97,6 @@ paths:
                 - password
                 - first_name
                 - last_name
-                - middle_name
                 - inn
                 - is_contractor
               properties:
@@ -1707,7 +1706,7 @@ components:
     password:
       type: string
       format: password
-      pattern: ^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$
+      pattern: ^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{8,}$
     Error:
       type: object
       required:
@@ -1739,7 +1738,7 @@ components:
       pattern: ^\+?\d{10,14}$
     name:
       type: string
-      minLength: 3
+      minLength: 1
       pattern: ^[а-яА-ЯёЁ]+$
       example: Абоба
     url:
@@ -1754,7 +1753,6 @@ components:
         - phone
         - first_name
         - last_name
-        - middle_name
         - email_verified
         - role
         - is_banned
