--- a/api/v1/properties/password.yaml
+++ b/api/v1/properties/password.yaml
@@ -1,3 +1,3 @@
 type: string
 format: password
-pattern: ^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$
+pattern: ^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{8,}$
