--- a/api/bundle.yaml
+++ b/api/bundle.yaml
@@ -959,6 +959,8 @@ paths:
         Для получения всех организаций (включая неверифицированные)
         **[Role](https://youtrack.ubrato.ru/articles/UBR-A-7/Roli-privilegii) required**:
         'Employee' or higher.
+      security:
+        - bearerAuth: []
       parameters:
         - name: verified
           in: query
@@ -1019,6 +1021,44 @@ paths:
                         type: array
                         items:
                           $ref: '#/components/schemas/Organization'
+        default:
+          $ref: '#/components/responses/Error'
+  /v1/organizations/contractors:
+    get:
+      tags:
+        - organizations
+      summary: Get contractors
+      description: Получить всех исполнителей (verifed=true, banned=false)
+      parameters:
+        - name: offset
+          in: query
+          description: Сдвиг начала каждой страницы на указанное количество единиц.
+          schema:
+            type: integer
+            minimum: 0
+            default: 0
+        - name: limit
+          in: query
+          description: Максимальное количество объектов, которое может вернуть запрос.
+          schema:
+            type: integer
+            minimum: 0
+            maximum: 100
+            default: 100
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - data
+                properties:
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Organization'
         default:
           $ref: '#/components/responses/Error'
   /v1/organizations/{organizationID}:
