--- a/api/v1/paths/organizations/_index.yaml
+++ b/api/v1/paths/organizations/_index.yaml
@@ -8,6 +8,8 @@ get:
     Для получения всех организаций (включая неверифицированные)
     **[Role](https://youtrack.ubrato.ru/articles/UBR-A-7/Roli-privilegii) required**:
     'Employee' or higher.
+  security:
+    - bearerAuth: []
   parameters:
     - name: verified
       in: query
