change logout method delete->post

--- a/api/bundle.yaml
+++ b/api/bundle.yaml
@@ -56,7 +56,7 @@ paths:
         default:
           $ref: '#/components/responses/Error'
   /v1/auth/logout:
-    delete:
+    post:
       tags:
         - auth
       summary: Logout User
