--- a/api/v1/schemas/CustomerInfo.yaml
+++ b/api/v1/schemas/CustomerInfo.yaml
@@ -1,6 +1,13 @@
 type: object
 required:
-  - todo
+  - description
+  - cities
 properties:
-  todo:
-    type: string
+  description:
+    $ref: "../properties/description.yaml"
+  cities:
+    type: array
+    description: Локации заказчика
+    items:
+      $ref: "./City.yaml"
+  
